[package]
name = "MQTTBench"
version = "0.1.0"
edition = "2018"

[profile.release]
opt-level=3
debug=0
debug-assertions=false
overflow-checks=false
lto=true
panic="abort"
incremental=false
codegen-units=1


[dependencies]
log = "0.4.14"
simple_logger = "1.13.0"
rumqttc = "0.8.0"
rand = "0.8.4"
serde_json = "1.0.67"
base64-easy = "0.1.1"

[dependencies.serde]
version = "1.0.130"
features = ["derive"]

[dependencies.tokio]
version = "1.13.1"
features = ["rt", "macros", "rt-multi-thread", "io-util"]